--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -6,6 +6,7 @@
     <title>
         @ViewBag.Title
     </title>
+    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
     @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
