Need to fix the jQuery scripts

--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index_orig.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index_orig.cshtml
@@ -69,18 +69,6 @@
         s.ShowAtPos(x + 320, y + 430);
     }
 </script>
-@Html.DevExpress().Panel(p =>
-{
-    p.Name = "pnlWeightGraphNew";
-    p.ControlStyle.BackColor = System.Drawing.Color.Red;
-    p.SetContent(() =>
-    {
-        ViewContext.Writer.Write("This is where I'm going to put the weight graph now");
-        var userId = Session["UserId"];
-        Html.RenderAction("ClientWeightGraph", "ClientCharts", new { userId = userId });
-    });
-}).GetHtml()
-
 <center>
 
     @Html.DevExpress().DockPanel(settings =>
@@ -146,7 +134,7 @@
     });
 }).GetHtml()
 
-    @*@Html.DevExpress().DockPanel(settings =>
+    @Html.DevExpress().DockPanel(settings =>
 {
     
     settings.Name = "pnlWeightGraph";
@@ -163,7 +151,7 @@
     });
 
 
-}).GetHtml()*@
+}).GetHtml()
     @Html.DevExpress().DockPanel(settings =>
     {
         settings.Name = "pnlPastPerf";
@@ -204,7 +192,21 @@
         }).GetHtml()*@
 
 
-
+    @Html.DevExpress().PopupControl(settings =>
+    {
+        settings.Name = "popupControl";
+        settings.Width = 400;
+        settings.AllowDragging = true;
+        settings.CloseAction = CloseAction.CloseButton;
+        settings.CloseOnEscape = true;
+        settings.PopupAnimationType = AnimationType.Fade;
+        settings.ShowHeader = false;
+        settings.Modal = true;
+        settings.AutoUpdatePosition = true;
+        settings.PopupHorizontalAlign = PopupHorizontalAlign.WindowCenter;
+        settings.PopupVerticalAlign = PopupVerticalAlign.WindowCenter;
+        settings.ClientSideEvents.CloseUp = "function(s, e){ ASPxClientEdit.ClearEditorsInContainer(null, '', true); }";
+    }).GetHtml()
 
     <div class="zoneContainer">
         @Html.DevExpress().DockZone(
@@ -253,7 +255,7 @@
     </div>
 </center>
 
-@*<script type="text/javascript">
+<script type="text/javascript">
 
         //debugger;
         function openWindow(action) {
@@ -273,4 +275,4 @@
             window['popupControl'].Show();
         }
 
-</script>*@
+</script>
