--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -6,20 +6,21 @@
     <title>
         @ViewBag.Title
     </title>
-    @Styles.Render("~/Content/bundle")
-    @Styles.Render("~/Content/DevExtremeBundle")
-
     @Html.DevExpress().GetScripts(
         new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
         new Script { ExtensionSuite = ExtensionSuite.Editors },
         new Script { ExtensionSuite = ExtensionSuite.GridView }
     )
+    @Styles.Render("~/Content/bundle")
+    @Styles.Render("~/Content/DevExtremeBundle")
+
+
     @Scripts.Render("~/Scripts/bundle")
     @Scripts.Render("~/Scripts/DevExtremeBundle")
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @*<script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/jquery")
+    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>*@
+    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
 
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/site.css")" rel="stylesheet">
