--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -253,7 +253,7 @@
     </div>
 </center>
 
-@*<script type="text/javascript">
+<script type="text/javascript">
 
         //debugger;
         function openWindow(action) {
@@ -273,4 +273,4 @@
             window['popupControl'].Show();
         }
 
-</script>*@
+</script>
