--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -71,7 +71,7 @@
             p.EnableClientSideAPI = true;
             p.Collapsible = true;
             p.SettingsAdaptivity.CollapseAtWindowInnerWidth = 580;
-            p.ControlStyle.BackColor = System.Drawing.Color.Blue;
+            //p.ControlStyle.BackColor = System.Drawing.Color.Blue;
             p.FixedPosition = PanelFixedPosition.WindowLeft;
             p.SetContent(() =>
             {
