--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_leftMenuPartialView.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_leftMenuPartialView.cshtml
@@ -1,5 +1,5 @@
 
-
+@Html.Hidden("enterMacros", Url.Action("EntryPopup", "UserProgress"))
 @if (Request.IsAuthenticated)
 {
 <div class="leftPanel">
