--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_enterDailyMacros.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_enterDailyMacros.cshtml
@@ -13,6 +13,7 @@
 
     settings.Items.Add(m => m.macroUserId, u =>
     {
+        u.ClientVisible = false;
         u.NestedExtension().TextBox(un =>
         {
             un.ClientVisible = false;
