--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientPerformanceGauge.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientPerformanceGauge.cshtml
@@ -7,17 +7,17 @@
         .Color("#FF1111")
     )
     .Scale(s => s
-        .StartValue(-10)
-        .EndValue(10)
+        .StartValue(-50)
+        .EndValue(50)
         .TickInterval(2)
         .Label(l => l.UseRangeColors(false))
     )
     .RangeContainer(c => c
         .Ranges(r =>
         {
-            r.Add().StartValue(-10).EndValue(-5).Color("Red");
-            r.Add().StartValue(-5).EndValue(5).Color("Green");
-            r.Add().StartValue(5).EndValue(10).Color("Red");
+            r.Add().StartValue(-50).EndValue(-25).Color("Red");
+            r.Add().StartValue(-25).EndValue(25).Color("Green");
+            r.Add().StartValue(25).EndValue(50).Color("Red");
         })
     )
     .Title(t => t
@@ -25,5 +25,6 @@
         .Font(f => f.Size(14).Color("White"))
     )
     .Export(e => e.Enabled(false))
-    .Value(Model)
+    .Value(Model.actualWeight)
+    .Subvalues(new double[] { Model.plannedWeight })
 )
