--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -258,7 +258,7 @@
         settings.AllowDragging = true;
         settings.CloseAction = CloseAction.CloseButton;
         settings.CloseOnEscape = true;
-        settings.PopupAnimationType = AnimationType.Fade;
+        settings.PopupAnimationType = DevExpress.Web.AnimationType.Fade;
         settings.ShowHeader = false;
         settings.Modal = true;
         settings.AutoUpdatePosition = true;
